--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/plugins.js"></script>
-	
+	<script src="js/nav.js"></script>	
 	<script src="js/index.js"></script>
 
 </body>
